# nba-scraper

./: .gitignore  README.md  pyproject.toml
nba_scraper/: bbref_scrape.py  nba_scrape.py  player_scrape.py  team_scrape.py
