[tool.poetry]
name = "nba-scraper"
version = "0.1.0"
description = ""
authors = ["nathanwright11 <nathanwright11@gmail.com>"]
readme = "README.md"
packages = [{include = "nba_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
